--- a/index.html
+++ b/index.html
@@ -1,139 +1,95 @@
+
+134
+135
+136
+137
+138
+139
+140
+141
+142
+143
+144
+145
+146
+147
+148
+149
+150
+151
+152
+153
+154
+155
+156
+157
+158
+159
+160
+161
+162
+163
+164
+165
+166
+167
+168
+169
+170
+171
+172
+173
+174
+175
+176
+177
+178
+179
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess and Cricket</title>
-    <style>
-        body {
-            background-color: #f5f5f5;
-            color: #000;
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            transition: background-color 0.5s ease, color 0.5s ease;
-        }
+            <h3>Legendary Chess Champions</h3>
+            <div class="card-container">
+                <a href="#" class="card garry-kasparov">
+                    <h4>Garry Kasparov</h4>
+                </a>
+                <a href="#" class="card magnus-carlsen">
+                    <h4>Magnus Carlsen</h4>
+                </a>
+                <a href="#" class="card bobby-fischer">
+                    <h4>Bobby Fischer</h4>
+                </a>
+                <a href="#" class="card viswanathan-anand">
+                    <h4>Viswanathan Anand</h4>
+                </a>
+            </div>
+        </section>
 
-        header {
-            background-color: #004d99;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
-        }
-
-        .content {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            transition: background-color 0.5s ease;
-        }
-
-        img {
-            display: block;
-            margin: 20px auto;
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        img:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        h3, p {
-            font-size: 1rem;
-        }
-
-        .footer {
-            background-color: #222;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            width: 100%;
-            margin-top: 20px;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #007aff;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        nav a:hover {
-            color: #005bb5;
-        }
-
-        .fade-in {
-            animation: fadeIn 2s;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Chess and Cricket</h1>
-    </header>
-
-    <nav>
-        <a href="#cricket">Cricket</a>
-        <a href="#chess">Chess</a>
-    </nav>
-
-    <!-- Chess Overview Section -->
-    <div class="content" id="chess">
-        <h2 class="fade-in">Chess: A Game of Kings</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Chess_Board.jpg" alt="Chess Board">
-        <p class="fade-in">Chess, often called the "Game of Kings," is a strategic and intellectual pursuit that has captivated minds for centuries. Originating in India as Chaturanga, chess has evolved into a global phenomenon. Its timeless appeal lies in the endless possibilities and the mental challenge it presents to players of all levels.</p>
-
-        <h3 class="fade-in">Great Chess Champions</h3>
-        <ul class="fade-in">
-            <li><strong>Garry Kasparov:</strong> Widely regarded as one of the greatest chess players of all time, Kasparov dominated the chess world from 1985 to 2000, holding the title of World Chess Champion for over 15 years.</li>
-            <li><strong>Magnus Carlsen:</strong> The reigning World Chess Champion, known for his deep understanding of the game and ability to outplay opponents in seemingly equal positions.</li>
-            <li><strong>Bobby Fischer:</strong> An American chess prodigy who became World Champion in 1972, Fischer is celebrated for his revolutionary ideas and unmatched talent.</li>
-            <li><strong>Viswanathan Anand:</strong> The first Indian to win the World Chess Championship, Anand's contributions have inspired a new generation of players in India.</li>
-        </ul>
-
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Kasparov-34.jpg" alt="Garry Kasparov">
-        <p class="fade-in">Chess champions are celebrated not only for their victories but also for the depth of their preparation, creativity, and sportsmanship. Their legacies inspire countless players to explore the beauty of chess.</p>
-    </div>
-
-    <!-- Cricket Section -->
-    <div class="content" id="cricket">
-        <h2 class="fade-in">Cricket: A Religion in India</h2>
-        <p class="fade-in">Cricket remains one of the most beloved sports globally, uniting fans across cultures and nations. In India, it is more than a game—it is a unifying force. Icons like Virat Kohli, Sachin Tendulkar, and MS Dhoni have left indelible marks on the sport.</p>
-    </div>
+        <section id="cricket" class="section">
+            <h2>Cricket: A Religion in India</h2>
+            <p>Cricket in India is more than just a sport—it’s a way of life. From the streets to international stadiums, cricket unites millions.</p>
+            <div class="card-container">
+                <a href="#" class="card">
+                    <h4>Sachin Tendulkar</h4>
+                </a>
+                <a href="#" class="card">
+                    <h4>Virat Kohli</h4>
+                </a>
+                <a href="#" class="card">
+                    <h4>MS Dhoni</h4>
+                </a>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
-        &copy; 2025 The World of Chess and Cricket. All rights reserved.
+        <p>&copy; 2025 Chess and Cricket. All rights reserved.</p>
     </footer>
+
+    <script>
+        const themeToggle = document.getElementById('themeToggle');
+        themeToggle.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+        });
+    </script>
 </body>
 </html>
+
