--- a/viratkohli.html
+++ b/viratkohli.html
@@ -1,45 +1,106 @@
- <div class="content" id="virat-kohli-section">
-        <h1>Virat Kohli The BEST Batsmen of this Decade </h1>
-        <img src="https://i.pinimg.com/736x/46/6b/ee/466bee8721d70384b99041c0b108339f.jpg" alt="Virat Kohli Image">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Virat Kohli</title>
+    <style>
+        body {
+            background-color: #f5f5f5;
+            color: #000000;
+            font-family: 'Times New Roman', Georgia, serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            transition: background-color 0.5s ease, color 0.5s ease;
+        }
+
+        header {
+            background-color: #ff0000;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 3rem;
+            margin: 0;
+        }
+
+        .content {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            transition: background-color 0.5s ease;
+        }
+
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        h3, p {
+            font-size: 1rem;
+            transition: color 0.5s ease;
+        }
+
+        .footer {
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            width: 100%;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Virat Kohli</h1>
+    </header>
+
+    <div class="content">
+        <img src="https://i.pinimg.com/736x/46/6b/ee/466bee8721d70384b99041c0b108339f.jpg" alt="Virat Kohli">
+        <h3>About Virat Kohli</h3>
         <p>
-            Virat Kohli, born on November 5, 1988, in Delhi, India, is not just a cricketer but a global icon whose name resonates with excellence, discipline, and passion for the sport. His journey began in the bustling streets of Delhi, where he first held a cricket bat at the tender age of three. Encouraged by his father, Prem Kohli, Virat joined the West Delhi Cricket Academy at the age of nine, where his talent quickly caught the attention of coaches. His early years were marked by relentless practice and a determination that belied his age.
+            Virat Kohli, often hailed as one of the greatest cricketers of the modern era, has left an indelible mark on the world of cricket with his exceptional talent, unparalleled work ethic, and an insatiable hunger for success. Born on November 5, 1988, in Delhi, India, Kohli’s journey from a young boy with big dreams to the captain of the Indian cricket team is a story of sheer determination and passion.
             <br><br>
-            Virat's rise through the ranks was meteoric. He led the Indian U-19 team to victory in the 2008 ICC U-19 Cricket World Cup in Malaysia, an achievement that marked him as a future star. Soon after, he debuted for the Indian national team in August 2008 in an ODI against Sri Lanka. While his initial performances were steady rather than spectacular, Kohli's relentless work ethic and hunger for runs soon became evident. By 2010, he had cemented his place in the Indian team across all formats.
+            Kohli burst onto the international scene in 2008, leading the Indian U-19 team to victory in the ICC U-19 Cricket World Cup. His transition to the senior team was seamless, and he quickly established himself as a dependable batsman in all formats of the game. Known for his aggressive batting style and ability to chase down daunting targets, Kohli became the backbone of India’s batting lineup.
             <br><br>
-            Kohli's batting style is a blend of classical technique and modern aggression. Known for his cover drives, quick running between the wickets, and ability to chase down daunting targets, he is regarded as one of the finest chasers in cricket history. He holds numerous records, including the fastest player to score 8,000, 9,000, 10,000, and 12,000 ODI runs. His consistency in both ODIs and Test cricket is unparalleled, with an average above 50 in both formats—a testament to his adaptability and skill.
+            Over the years, Kohli has broken numerous records, including being the fastest player to score 8,000, 9,000, 10,000, and 11,000 runs in One Day Internationals (ODIs). His consistency in scoring centuries, especially in run chases, earned him the nickname "Chase Master." As a captain, Kohli brought a new level of intensity and professionalism to the Indian team, emphasizing fitness and a never-say-die attitude.
             <br><br>
-            As a captain, Kohli brought an aggressive and fearless approach to the Indian team. He took over the Test captaincy from MS Dhoni in 2014 and transformed India into a dominant force in world cricket. Under his leadership, India reached the top of the ICC Test rankings and maintained their position for several years. He also led India to memorable Test series wins, including a historic victory in Australia in 2018-19—the first-ever Test series win by India on Australian soil.
+            Kohli’s cricketing achievements are unparalleled. He has amassed over 25,000 runs in international cricket, including more than 70 centuries across formats. His ability to perform under pressure has made him a legend of the game. In Tests, he has played several memorable innings, including a double century against the West Indies and a masterful 254 not out against South Africa. His exploits in ODIs are equally impressive, with unforgettable performances such as his 183 against Pakistan in the Asia Cup and a series of hundreds in Australia.
             <br><br>
-            Kohli's dominance extended to limited-overs cricket as well. In T20Is, he became the fastest player to reach multiple milestones, including the highest number of 50+ scores in the format. Despite his unparalleled success, one title that eluded him as captain was the ICC T20 World Cup trophy, a fact that remains a bittersweet aspect of his illustrious career. Nonetheless, his impact on Indian cricket and the T20 format is undeniable, inspiring a new generation of players to aim higher and play fearlessly.
+            As a leader, Kohli transformed the Indian Test team into a formidable unit. Under his captaincy, India achieved its first-ever Test series victory in Australia in 2018-19. Kohli’s leadership was characterized by his aggressive approach, strategic acumen, and the ability to inspire his teammates to perform at their best. His tenure as captain also saw India dominate the ICC Test rankings for several years.
             <br><br>
-            Kohli's career has not been without challenges. The untimely demise of his father in 2006 was a defining moment in his life. Remarkably, a young Kohli chose to play a crucial Ranji Trophy match for Delhi the very next day, scoring a vital 90 runs. This incident exemplified his dedication to cricket and his unyielding spirit. Later in his career, Kohli also faced form slumps and criticism, particularly during phases when centuries seemed elusive. However, each time, he silenced his critics with stunning comebacks, proving his mental toughness and determination.
+            Off the field, Kohli is a global icon. His popularity extends far beyond cricket, as he has become a brand ambassador for numerous causes and products. Kohli is a vocal advocate for fitness and healthy living, often sharing his workout routines and diet tips with fans. He has also ventured into entrepreneurship, launching his own clothing line and investing in fitness-related ventures.
             <br><br>
-            Off the field, Kohli has been an advocate for fitness and discipline. His transformation into one of the fittest athletes in the world inspired a fitness revolution in Indian cricket. His commitment to a strict diet, rigorous training regime, and healthy lifestyle set new benchmarks for cricketers globally. Beyond cricket, Kohli's philanthropic efforts through the Virat Kohli Foundation focus on supporting underprivileged children and promoting sports in India.
+            Kohli’s journey has not been without challenges. The loss of his father at a young age was a defining moment in his life. Despite the personal tragedy, Kohli’s determination to succeed never wavered. His ability to overcome adversity and rise to the top of the cricketing world is a testament to his resilience and mental strength.
             <br><br>
-            Kohli's decision to step down as T20I captain in 2021 and retire from the format in 2023 marked the end of an era. While his fans were emotional about the announcement, Kohli emphasized his desire to focus on other formats and prolong his cricketing career. Even after his retirement from T20Is, his influence on the format remains profound, with many considering him the finest T20 batsman of his generation.
+            Beyond cricket, Kohli is a philanthropist who is deeply committed to giving back to society. Through the Virat Kohli Foundation, he supports underprivileged children and promotes sports in India. His efforts to make a difference off the field have earned him widespread admiration and respect.
             <br><br>
-            Today, Virat Kohli's legacy is etched in the annals of cricket history. With over 70 international centuries and countless records to his name, he is regarded as one of the greatest cricketers of all time. More than the numbers, it is his attitude, passion, and drive that define his greatness. Whether it is his fiery celebrations, intense focus on the field, or heartfelt interactions with fans, Kohli embodies the spirit of modern cricket.
+            Today, Virat Kohli continues to inspire millions of fans around the world. His passion for the game, relentless pursuit of excellence, and dedication to his craft have made him a role model for aspiring cricketers. Kohli’s impact on the game of cricket is immeasurable, and his legacy as one of the greatest players of all time is firmly established.
             <br><br>
-            As he continues to play in other formats, Kohli remains a source of inspiration for millions around the world. His journey from a young boy in Delhi to a global superstar is a story of hard work, resilience, and an unrelenting pursuit of excellence.
+            Whether it’s his breathtaking cover drives, his fiery celebrations, or his unwavering focus on the field, Kohli embodies the spirit of modern cricket. As he continues to play and inspire, his journey serves as a reminder that with hard work, perseverance, and a never-give-up attitude, anything is possible.
         </p>
     </div>
 
     <footer class="footer">
-        &copy; 2025 The World of Cricket. All rights reserved.
+        &copy; 2025 Virat Kohli Fan Page. All rights reserved.
     </footer>
-
-    <script>
-        const toggleButton = document.getElementById('darkModeToggle');
-        const body = document.body;
-        const content = document.querySelectorAll('.content');
-        const textElements = document.querySelectorAll('h3, p, a, h1');
-
-        toggleButton.addEventListener('click', () => {
-            const isDarkMode = body.classList.toggle('dark-mode');
-            content.forEach(section => section.classList.toggle('dark-mode'));
-            textElements.forEach(element => element.classList.toggle('dark-mode'));
-            toggleButton.textContent = isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode';
-        });
-    </script>
 </body>
 </html>
