--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
         a.dark-mode:hover {
             color: #76c7ff;
         }
+   
+    .page-link {
+        display: inline-block;
+        padding: 12px 25px;
+        background: linear-gradient(145deg, #f3f3f3, #e2e2e2);
+        color: #007aff;
+        font-size: 1rem;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 30px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+        transition: all 0.3s ease;
+        border: 1px solid #d1d1d1;
+    }
+
+    .page-link:hover {
+        background: linear-gradient(145deg, #e2e2e2, #f3f3f3);
+        color: #005bb5;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
     </style>
     
     </head>
