--- a/viratkohli.html
+++ b/viratkohli.html
@@ -102,5 +102,7 @@
     <footer class="footer">
         &copy; 2025 Virat Kohli Fan Page. All rights reserved.
     </footer>
+       <a href="Indian%20Cricket%20Team.html" class="page-link">Indian Cricket Team</a>
+    <a href="index.html"="page-link"> Home Page</a>
 </body>
 </html>
