--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <!-- Add links with proper formatting -->
         <a href="viratkohli.html" class="page-link">Virat Kohli</a>
         <a href="Indian%20Cricket%20Team.html" class="page-link">Indian Cricket Team</a>
+           <a href="chess.html" class="page">Chess</a>
     </div>
     <footer class="footer">
         <p>© 2025 Cricket World. All rights reserved.</p>
